--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-
-
 body {
   font-family: 'Helvetica Neue', sans-serif;
   background-color: #0b0f1a;
@@ -34,7 +32,7 @@ header {
 }
 
 .logo-text {
-  font-size: 1.8rem;
+  font-size: 29px;
   color: #fff;
   font-weight: bold;
 }
@@ -47,13 +45,19 @@ header {
   list-style: none;
   display: flex;
   gap: 20px;
-  justify-content:flex-start
+  justify-content: flex-start;
 }
 
 .nav-list a {
-  justify-content:flex-start;
+  justify-content: flex-start;
   text-decoration: none;
   color: #a0dff0;
+}
+#menu-toggle{
+    display: none;
+    color: #fff;
+    background-color: #0b0f1a;
+     border: none;
 }
 
 /* Main */
@@ -76,23 +80,23 @@ header {
 }
 
 .article-content {
-  font-size: 1rem;
+  font-size: 16px;
 }
 
 .article-title {
-  font-size: 2.2rem;
+  font-size: 35px;
   color: #fff;
   margin-bottom: 10px;
 }
 
 .article-subtitle {
-  font-size: 1.2rem;
+  font-size: 19px;
   color: #b2ebf2;
   margin-bottom: 10px;
 }
 
 .article-author {
-  font-size: 0.9rem;
+  font-size: 14px;
   color: #80cbc4;
   margin-bottom: 20px;
 }
@@ -133,7 +137,7 @@ header {
 
 .newsletter-text {
   margin-top: 10px;
-  font-size: 0.95rem;
+  font-size: 15px;
   color: #cfd8dc;
 }
 
@@ -141,7 +145,7 @@ header {
   width: 100%;
   padding: 10px;
   margin-top: 10px;
-  font-size: 1rem;
+  font-size: 16px;
   border: none;
   border-radius: 4px;
 }
@@ -152,7 +156,7 @@ header {
   width: 95%;
   padding: 10px;
   margin-top: 10px;
-  font-size: 1rem;
+  font-size: 16px;
   border: none;
   border-radius: 4px;
 }
@@ -173,22 +177,21 @@ header {
 .footer-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   gap: 40px;
-  max-width: 1200px;
+  width: 70%;
   margin: auto;
   padding: 0 20px 40px;
-  justify-content: space-between;
 }
 
 .footer-column {
   flex: 1;
-  min-width: 200px;
 }
 
 .footer-title {
   color: #00bcd4;
   margin-bottom: 10px;
-  font-size: 1.1rem;
+  font-size: 18px;
 }
 
 .footer-list {
@@ -203,7 +206,7 @@ header {
 .footer-list a {
   color: #a0dff0;
   text-decoration: none;
-  font-size: 0.95rem;
+  font-size: 15px;
 }
 
 .footer-brand .footer-logo {
@@ -213,14 +216,82 @@ header {
 
 .footer-description {
   color: #90a4ae;
-  font-size: 0.95rem;
+  font-size: 15px;
   line-height: 1.4;
 }
 
 .footer-bottom {
   text-align: center;
-  padding: 20px;
   border-top: 1px solid #2e3e50;
-  font-size: 0.9rem;
+  font-size: 14px;
   color: #90a4ae;
+  padding-bottom: 5px;
+}
+/* MEDIAS QUERY MOBILE */
+@media (max-width: 480px) {
+  .header-content,
+  .main-container,
+  .footer-container {
+    width: 90%;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .nav-list {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .logo-text {
+    font-size: 24px;
+  }
+
+  .article-title {
+    font-size: 26px;
+  }
+
+  .article-subtitle {
+    font-size: 16px;
+  }
+
+  .main-container {
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px 10px;
+  }
+
+  .footer-column {
+    width: 100%;
+  }
+
+  .newsletter-input {
+    width: 100%;
+  }
+
+  #menu-toggle {
+    display: block;
+  }
+  .nav-p{
+    display: none;
+  }
+}
+
+/* MEDIAS QUERY TABLET */
+
+@media (min-width: 481px) and (max-width: 768px) {
+
+  .main-container {
+    flex-direction: column;
+    gap: 30px;
+    padding: 30px 15px;
+  }
+
+  .footer-column {
+    width: 100%;
+  }
+
+  .newsletter-input {
+    width: 100%;
+  }
 }
