--- a/css/styles.css
+++ b/css/styles.css
@@ -209,7 +209,7 @@ header {
   font-size: 15px;
 }
 
-.footer-brand .footer-logo {
+.footer-logo {
   width: 40px;
   margin-bottom: 10px;
 }
@@ -280,6 +280,16 @@ header {
 /* MEDIAS QUERY TABLET */
 
 @media (min-width: 481px) and (max-width: 768px) {
+
+  .header-content,
+  .main-container,
+  .footer-container {
+    width: 90%;
+    padding: 0 10px;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
 
   .main-container {
     flex-direction: column;
